[project]
name = "tus-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Smith", email = "a.smith@silentworks.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "supabase>=2.11.0",
    "tuspy>=1.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
